# ai-chatbot

./: .gitignore  README.md  chatbot.ipynb  pyproject.toml  rag.ipynb  readme.md  simple_rag.py
backend/services/chat-service/: pyproject.toml
backend/services/ingestion-service/: README.md  pyproject.toml
backend/services/ingestion-service/src/ingestion_service/: main.py
backend/services/ingestion-service/src/ingestion_service/api/: ingestion_routes.py
backend/services/ingestion-service/src/ingestion_service/config/: db.py
backend/services/ingestion-service/src/ingestion_service/core/chunker/: SemanticChunker.py
backend/services/ingestion-service/src/ingestion_service/core/content_loader/: __init__.py  pdf-loader.py  web_loader.py
backend/services/ingestion-service/src/ingestion_service/models/: model.py
backend/services/ingestion-service/src/ingestion_service/schemas/: request.py  response.py
backend/services/ingestion-service/src/ingestion_service/services/: ingestion_service.py
backend/services/shared-service/: pyproject.toml
backend/services/shared-service/src/shared_service/: logger.py  main.py  test.py
backend/services/shared-service/src/shared_service/config/: settings.py
backend/services/shared-service/src/shared_service/embedder/: hugging_face_embedding.py
backend/services/shared-service/src/shared_service/vector_store/: chroma_store.py
chrom_db/: chroma.sqlite3
doc/: notes.md  notes.txt
rag_data/: company.db  dividend.csv  employee.json  frontend.docx  leave_policy.txt  work_timing_policy.txt
