[project]
name = "ai-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "langchain-community>=0.4",
    "langchain-groq>=1.0.0",
    "langchain-openai>=1.0.0",
    "langgraph>=1.0.1",
    "python-dotenv>=1.1.1",
    "wikipedia>=1.4.0",
]

