[project]
name = "ingestion-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.3.5",
    "debugpy>=1.8.17",
    "fastapi>=0.123.5",
    "langchain>=1.1.0",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "langchain-huggingface>=1.1.0",
    "sentence-transformers>=5.1.2",
    "uv>=0.9.13",
]
[project.scripts]
dev = "ingestion_service.debug:run"

[tool.uv]
package = true


[tool.setuptools.packages.find]
where = ["src"]

