[project]
name = "shared-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.3.5",
    "langchain-chroma>=1.0.0",
    "langchain-core>=1.1.1",
    "langchain-huggingface>=1.1.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]
